# fastapi-keycloak

./: .coverage  .gitignore  404.html  LICENSE  README.md  codecov.yaml  example_app.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: codeql.yml  testing.yaml
apple-m1/: index.html
docs/: CNAME  full_example.md  index.html  index.md  installation.md  introduction.md  keycloak_configuration.md  quick-start.md  quick_start.md  reference.md
docs/css/: styles.css
docs/examples/: app.py
docs/installation/: index.html
docs/quick-start/: index.html
docs/reference/: index.html
documentation/: mkdocs.yaml
documentation/docs/: apple-m1.md  full_example.md  index.md  keycloak_configuration.md  quick_start.md  reference.md
documentation/docs/css/: styles.css
documentation/site/: 404.html
documentation/site/apple-m1/: index.html
fastapi-keycloak/: api.py  exceptions.py
fastapi_keycloak/: .coverage  __init__.py  api.py  exceptions.py  functions.py  model.py  requirements.txt  setup.py
full_example/: index.html
installation/: index.html
introduction/: index.html
keycloak_configuration/: index.html
quick-start/: index.html
quick_start/: index.html
reference/: index.html
search/: search_index.json
tests/: .coverage  .coveragerc  __init__.py  app.py  build_keycloak_m1.sh  conftest.py  coverage.xml  keycloak_postgres.yaml  pytest.ini  realm-export.json  requirements.txt  start_infra.sh  stop_infra.sh  test_functional.py  test_integration.py  test_unit.py  wait_for_service.sh
tests/tests/: coverage.xml
(+9 files in other folders)
