[project]
name = "fastapi_keycloak"
authors = [
    { name = "Jonas Scholl", email = "jonas@code-specialist.com" },
    { name = "Yannic Schröer", email = "yannic@code-specialist.com" }
]
maintainers = [
    { name = "Jonas Scholl", email = "jonas@code-specialist.com" },
    { name = "Yannic Schröer", email = "yannic@code-specialist.com" }
]
readme = "README.md"
keywords = ['Keycloak', 'FastAPI', 'Authentication', 'Authorization']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Session',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: FastAPI',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.8',
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "anyio>=3.4.0",
    "asgiref>=3.4.1",
    "certifi>=2021.10.8",
    "charset-normalizer>=2.0.9",
    "click>=8.0.3",
    "ecdsa>=0.17.0",
    "fastapi>=0.70.1",
    "h11>=0.12.0",
    "idna>=3.3",
    "pyasn1>=0.4.8",
    "pydantic>=1.5a1",
    "python-jose>=3.3.0",
    "requests>=2.26.0",
    "rsa>=4.8",
    "six>=1.16.0",
    "sniffio>=1.2.0",
    "starlette>=0.16.0",
    "typing_extensions>=4.0.1",
    "urllib3>=1.26.7",
    "uvicorn>=0.16.0",
    "itsdangerous>=2.0.1",
]

[project.urls]
Documentation = "https://fastapi-keycloak.code-specialist.com/"